@@ -31,6 +31,7 @@ Version 1.3.13+svn:
      recruitment
    * avoid triggering an assertion when a duplicated side definition exists
      (bug #7252)
+   * Added boolean variable disallow_observers to side defination
  * miscellaneous and bug fixes:
    * set the default resistance to 100 (no resistance) instead of 0 (immune)
      (bug #10661)
